Lecture 3-1. Uniform의 사용

--- a/GLSLBase/GLSLBase.vcxproj
+++ b/GLSLBase/GLSLBase.vcxproj
@@ -173,6 +173,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\Lecture3.fs" />
+    <None Include="Shaders\Lecture3.vs" />
     <None Include="Shaders\SolidRect.fs" />
     <None Include="Shaders\SolidRect.vs" />
   </ItemGroup>
