--- a/GLSLBase/GLSLBase.vcxproj
+++ b/GLSLBase/GLSLBase.vcxproj
@@ -175,6 +175,8 @@
   <ItemGroup>
     <None Include="Shaders\Lecture3.fs" />
     <None Include="Shaders\Lecture3.vs" />
+    <None Include="Shaders\Particle3_3.fs" />
+    <None Include="Shaders\Particle3_3.vs" />
     <None Include="Shaders\SolidRect.fs" />
     <None Include="Shaders\SolidRect.vs" />
   </ItemGroup>
