--- a/GLSLBase/GLSLBase.vcxproj.filters
+++ b/GLSLBase/GLSLBase.vcxproj.filters
@@ -47,6 +47,12 @@
     <None Include="Shaders\Particle3_3.vs">
       <Filter>Shader</Filter>
     </None>
+    <None Include="Shaders\FSSandbox.fs">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="Shaders\FSSandbox.vs">
+      <Filter>Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
