--- a/GLSLBase/GLSLBase.vcxproj
+++ b/GLSLBase/GLSLBase.vcxproj
@@ -177,6 +177,8 @@
     <None Include="Shaders\FSSandbox.vs" />
     <None Include="Shaders\Lecture3.fs" />
     <None Include="Shaders\Lecture3.vs" />
+    <None Include="Shaders\LineSegment.fs" />
+    <None Include="Shaders\LineSegment.vs" />
     <None Include="Shaders\Particle3_3.fs" />
     <None Include="Shaders\Particle3_3.vs" />
     <None Include="Shaders\SolidRect.fs" />
