--- a/GLSLBase/GLSLBase.vcxproj
+++ b/GLSLBase/GLSLBase.vcxproj
@@ -173,18 +173,20 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\FSSandbox.fs" />
+    <None Include="Shaders\FSSandbox.ps" />
     <None Include="Shaders\FSSandbox.vs" />
-    <None Include="Shaders\FullRect.fs" />
+    <None Include="Shaders\FullRect.ps" />
     <None Include="Shaders\FullRect.vs" />
-    <None Include="Shaders\Lecture3.fs" />
+    <None Include="Shaders\Lecture3.ps" />
     <None Include="Shaders\Lecture3.vs" />
-    <None Include="Shaders\LineSegment.fs" />
+    <None Include="Shaders\LineSegment.ps" />
     <None Include="Shaders\LineSegment.vs" />
-    <None Include="Shaders\Particle3_3.fs" />
+    <None Include="Shaders\Particle3_3.ps" />
     <None Include="Shaders\Particle3_3.vs" />
-    <None Include="Shaders\SolidRect.fs" />
+    <None Include="Shaders\SolidRect.ps" />
     <None Include="Shaders\SolidRect.vs" />
+    <None Include="Shaders\TextureSandbox.ps" />
+    <None Include="Shaders\TextureSandbox.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
