--- a/GLSLBase/GLSLBase.vcxproj
+++ b/GLSLBase/GLSLBase.vcxproj
@@ -173,6 +173,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\DummyMesh.ps" />
+    <None Include="Shaders\DummyMesh.vs" />
     <None Include="Shaders\FSSandbox.ps" />
     <None Include="Shaders\FSSandbox.vs" />
     <None Include="Shaders\FullRect.ps" />
